// 用户领域服务
syntax = "proto3";
// app.server
package user.user_session_server;

option java_multiple_files = true;
option java_package = "com.seezoon.user.session.server.stub";
option go_package = "./pb";
import "google/protobuf/timestamp.proto";

service UserSessionService {
  rpc Create(CreateSessionReq) returns(CreateSessionResp) {};
}

message CreateSessionReq {
  string sessionId = 1;
  int32 expireSeconds = 2;
  int64 uid = 3;
  int32 loginType = 4;
  google.protobuf.Timestamp loginTime = 5;
  bytes signature = 6;
}

message CreateSessionResp {
  string sessionId = 1;
}

